Sharing / Batch mode / Fix +/- icon on Firefox.
See https://bugzilla.mozilla.org/show_bug.cgi?id=765035
https://www.w3.org/TR/CSS2/generate.html#before-after-content

Replace CSS after by icon checking input validity.

--- a/web-ui/src/main/resources/catalog/style/gn.less
+++ b/web-ui/src/main/resources/catalog/style/gn.less
@@ -1105,29 +1105,6 @@ select.ng-invalid {
   }
 }
 
-/* Highlight updated checkboxes in sharing form */
-.gn-sharing-batch {
-  // remove
-  input.ng-dirty.ng-empty:after {
-    content: "-";
-    padding-left: 20px;
-    margin-top: -20px;
-    color: @brand-danger;
-    font-size: 24px;
-    display: inline-block;
-    font-weight: bold;
-  }
-  // add
-  input.ng-dirty.ng-not-empty:after {
-    content: "+";
-    padding-left: 20px;
-    margin-top: -20px;
-    color: @brand-success;
-    font-size: 24px;
-    display: inline-block;
-    font-weight: bold;
-  }
-}
 [gn-batch-categories] {
   // remove
   input.ng-dirty.ng-empty ~ span {
